# Chess

./: .gitignore  404.html  Cargo.toml  Dockerfile  README.md  index.html  print.html  rustfmt.toml  searchindex.js  searchindex.json  todo  todo.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  crate_io-push.yml  docker-push.yml  label-sync.yml  publish-crate.yml
.run/: Benches.run.xml  Clippy-Check.run.xml  Debug.run.xml  Doc.run.xml  Example.run.xml  Fmt.run.xml  MdBook.run.xml  Release.run.xml  Tests.run.xml
benches/: simple-bench.rs
benches/multi-file-bench/: main.rs
chess/: index.html
chess/notation/: fen.html  index.html  san.html
chess/rules/: index.html  initial-setup.html
chess/rules/gameplay/: check.html  index.html
chess/rules/gameplay/end-of-the-game/: checkmate.html  flag-fall.html  index.html  resigning.html
chess/rules/gameplay/end-of-the-game/draws/: dead-position.html  index.html
chess/rules/gameplay/movement/: basic-moves.html  castling.html  en-passant.html  index.html  promotion.html
chess/rules/gameplay/movement/specific-rules/: fifty-move-rule.html  index.html
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/chess/: README.md
docs/src/chess/notation/: README.md  fen.md  san.md
docs/src/chess/rules/: README.md  initial-setup.md
docs/src/chess/rules/gameplay/: README.md  check.md
docs/src/chess/rules/gameplay/end-of-the-game/: README.md  checkmate.md  flag-fall.md  resigning.md
docs/src/misc/: contributors.md
docs/src/user-guide/: basics.md  installation.md
examples/: simple.rs
examples/multi-file-example/: main.rs
misc/: contributors.html
src/: lib.rs  main.rs
src/_chess/: board.rs  chess.rs  common.rs  mod.rs  piece.rs  player.rs
src/chess/: board.rs  button.rs  castle_rights.rs  chess.rs  chess_gui.rs  chess_move.rs  chess_position.rs  color.rs  common.rs  config.rs  direction.rs  error.rs  file.rs  game.rs  lib.rs  mod.rs  piece.rs  rank.rs  square.rs  theme.rs
tests/: some-integration-tests.rs
tests/multi-file-test/: main.rs  test_module.rs
user-guide/: basics.html  configuration.html  installation.html
(+9 files in other folders)
