[package]
name = "chess"
version = "0.2.0"
authors = ["Valentin Colin <valentin.colin78@gmail.com>", "Marc Partensky <marc.partensky@gmail.com>"]
edition = "2021"
description = "Game Chess with graphical interface"
homepage = "https://github.com/rust-games/chess.git"
repository = "https://github.com/rust-games/chess.git"
license = "MIT"
# licence-file = "LICENSE"
keywords = ["game"]

[dependencies]
ggez = "0.7.0"
grid = "0.8.1"
glam = { version = "0.21.3", features = ["mint"] }
# Has to be the same version of mint that our math lib uses here.
mint = "0.5"
log = "0.4.17"
env_logger = "0.9.0"
thiserror = "1.0.32"

[lib]
name = "chess"
path = "src/chess/lib.rs"

